got rid of favicon

--- a/cldstr-manifest.json
+++ b/cldstr-manifest.json
@@ -97,8 +97,7 @@
             "404.html",
             "422.html",
             "500.html",
-				"robots.txt",
-				"favicon.ico"
+				"robots.txt"
           ]
         },
         {
